@@ -48,6 +48,7 @@ lib/npg_pipeline/function/definition.pm
 lib/npg_pipeline/function/haplotype_caller.pm
 lib/npg_pipeline/function/illumina_qc_archiver.pm
 lib/npg_pipeline/function/log_files_archiver.pm
+lib/npg_pipeline/function/merge_recompress.pm
 lib/npg_pipeline/function/p4_stage1_analysis.pm
 lib/npg_pipeline/function/product_delivery_notifier.pm
 lib/npg_pipeline/function/run_data_to_irods_archiver.pm
@@ -113,6 +114,7 @@ t/20-function-definition.t
 t/20-function-haplotype_caller.t
 t/20-function-illumina_qc_archiver.t
 t/20-function-log_files_archiver.t
+t/20-function-merge_recompress.t
 t/20-function-p4_stage1_analysis.t
 t/20-function-product_delivery_notifier.t
 t/20-function-run_data_to_irods_archiver.t
